# RegisterMachine

./: .gitignore  CMakeLists.txt  README.md  fib.regm  mult.regm  power.regm  test.regm
.github/workflows/: ci.yml
src/: CMakeLists.txt  RegisterMachine.cpp  executor.cpp  executor.hpp  ioreader.cpp  ioreader.hpp  operators.cpp  operators.hpp  parser.cpp  parser.hpp  register.cpp  register.hpp
tests/: CMakeLists.txt  operators-test.cpp  parser-test.cpp
